--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Max Böcker <max.boecker@rwth-aachen.de>"]
 edition = "2018"
 
 [dependencies]
-mobi-sys = "0.1.2"
+mobi-sys = { git = "https://github.com/morbatex/mobi-sys" }
 libc = "0.2.43"
